Update database connection