@@ -1,26 +1,19 @@
 package com.bdd.database.service;
 
 import java.util.ArrayList;
-import java.util.Arrays;
 import java.util.Collection;
 import java.util.Collections;
-import java.util.HashMap;
 import java.util.List;
-import java.util.Map;
-import java.util.Optional;
-import java.util.stream.IntStream;
 
 import org.dbunit.database.IDatabaseConnection;
-import org.dbunit.dataset.Column;
-import org.dbunit.dataset.DataSetException;
 import org.dbunit.dataset.IDataSet;
 import org.dbunit.dataset.ITable;
 import org.dbunit.operation.DatabaseOperation;
 import org.springframework.stereotype.Service;
 
+import com.bdd.database.mapper.DatabaseTableConverter;
 import com.bdd.database.schema.DatabaseSchema;
 import com.bdd.database.schema.DatabaseSchemaInitializer;
-import com.bdd.database.schema.table.DefaultTableStructure;
 import com.bdd.database.schema.table.TableIdentifier;
 import com.bdd.database.schema.table.TableStructure;
 
@@ -40,9 +33,13 @@ public class DatabaseService {
 		return databaseSchemaInitializer.getDatabaseSchemas();
 	}
 
-	public DatabaseSchema getSchemaBy(String tableName) {
-		return databaseSchemaInitializer.getSchemaBy(tableName)
-				.orElseThrow(() -> new IllegalArgumentException(String.format("Schema of table [%s] was not found.", tableName)));
+	public String findSchemaName(String tableName) {
+		return databaseSchemaInitializer.findSchemaName(tableName);
+	}
+
+	public DatabaseSchema getSchemaBy(TableIdentifier tableIdentifier) {
+		return databaseSchemaInitializer.getSchemaBy(tableIdentifier)
+				.orElseThrow(() -> new IllegalArgumentException("Schema was not found for [%s].".formatted(tableIdentifier)));
 	}
 
 	public List<TableIdentifier> deletionCascade(TableStructure tableStructure) {
@@ -55,15 +52,15 @@ public class DatabaseService {
 		return result;
 	}
 
-	public void deleteAll(TableIdentifier tableIdentifier, IDatabaseConnection connection) {
-		var tableStructure = getTableStructure(tableIdentifier.tableName());
-		var dataSet = DefaultTableStructure.fromDataTable(tableStructure, DataTable.emptyDataTable());
+	public void deleteAll(TableIdentifier tableId, IDatabaseConnection connection) {
+		var tableStructure = getTableStructure(tableId);
+		var dataSet = DatabaseTableConverter.fromDataTable(tableStructure, DataTable.emptyDataTable());
 		execute(DatabaseOperation.DELETE_ALL, connection, dataSet);
 	}
 
-	public void insert(TableIdentifier identifier, IDatabaseConnection connection, DataTable dataTable) {
-		var tableStructure = getTableStructure(identifier.tableName());
-		var dataSet = DefaultTableStructure.fromDataTable(tableStructure, dataTable);
+	public void insert(TableIdentifier tableId, IDatabaseConnection connection, DataTable dataTable) {
+		var tableStructure = getTableStructure(tableId);
+		var dataSet = DatabaseTableConverter.fromDataTable(tableStructure, dataTable);
 		execute(DatabaseOperation.INSERT, connection, dataSet);
 	}
 
@@ -72,7 +69,7 @@ public class DatabaseService {
 			return connection.createTable(tableIdentifier.tableName());
 		}
 		catch (Exception e) {
-			throw new IllegalArgumentException("Can't fetch data from the: %s" + tableIdentifier.toString(), e);
+			throw new IllegalArgumentException("Can't fetch data from the: [%s]" + tableIdentifier.toString(), e);
 		}
 	}
 
@@ -80,48 +77,13 @@ public class DatabaseService {
 		operationsExecutor.execute(operation, connection, dataSet);
 	}
 
-	private List<Map<String, String>> asRowsMaps(ITable table) {
-		return IntStream.range(0, table.getRowCount())
-				.collect(ArrayList::new,
-						(rows, rowIdx) -> accumulateRows(rows, table, rowIdx),
-						ArrayList::addAll);
+	private DatabaseSchema getDatabaseSchema(TableIdentifier tableId) {
+		return databaseSchemaInitializer.getSchemaBy(tableId)
+				.orElseThrow(() -> new IllegalArgumentException("Can't find schema for the [%s] table.".formatted(tableId)));
 	}
 
-	private void accumulateRows(List<Map<String, String>> rows, ITable table, int rowIdx) {
-		Map<String, String> rowsMap = new HashMap<>();
-		Arrays.stream(getColumns(table)).forEach(column -> {
-					try {
-						var rowValue = Optional.ofNullable(table.getValue(rowIdx, column.getColumnName()))
-								.map(Object::toString)
-								.orElse(null);
-
-						rowsMap.put(column.getColumnName().toUpperCase(), rowValue);
-						rows.add(rowsMap);
-					}
-					catch (DataSetException e) {
-						throw new IllegalArgumentException(String.format("Can't find a value for row: [%s] column: [%s]", rowIdx,
-								column.getColumnName()), e);
-					}
-				}
-		);
-	}
-
-	private Column[] getColumns(ITable table) {
-		try {
-			return table.getTableMetaData().getColumns();
-		}
-		catch (DataSetException e) {
-			throw new IllegalArgumentException("Can't get columns for the: " + table.getTableMetaData().getTableName(), e);
-		}
-	}
-
-	private DatabaseSchema getDatabaseSchema(String tableName) {
-		return databaseSchemaInitializer.getSchemaBy(tableName)
-				.orElseThrow(() -> new IllegalArgumentException(String.format("Can't find schema for the [%s] table.", tableName)));
-	}
-
-	private TableStructure getTableStructure(String tableName) {
-		return getDatabaseSchema(tableName).getTableStructure(tableName)
-				.orElseThrow(() -> new IllegalArgumentException(String.format("Can't find [%s] table.", tableName)));
+	private TableStructure getTableStructure(TableIdentifier tableId) {
+		return getDatabaseSchema(tableId).getTableStructure(tableId)
+				.orElseThrow(() -> new IllegalArgumentException("Can't find [%s] table.".formatted(tableId)));
 	}
 }
